# a2a-rust-sdk

./: Cargo.toml  README.md
benches/: serialization.rs
examples/: basic_client.rs  basic_server.rs  mtls_client.rs  mtls_server.rs
examples/certs/: README.md
scripts/: generate_mtls_certs.sh
src/: lib.rs
src/client/: a2a_client.rs  mod.rs
src/core/: error_code.rs  exception.rs  jsonrpc_request.rs  jsonrpc_response.rs  mod.rs
src/models/: a2a_response.rs  agent_card.rs  agent_message.rs  agent_task.rs  artifact.rs  message_part.rs  message_send_params.rs  mod.rs  task_status.rs
src/server/: axum_integration.rs  memory_task_store.rs  mod.rs  task_manager.rs  task_store.rs
tests/: axum_router.rs  discovery.rs  jsonrpc.rs  model_json.rs  task_manager.rs
